--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Spa - Professional Massage & Esthetics</title>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Open Sans', sans-serif;
-            line-height: 1.6;
+            line-height: 150%;
             color: #000000;
         }
 
@@ -50,7 +50,7 @@
             padding: 10px 20px;
             border-radius: 25px;
             font-size: 12px;
-            font-weight: 500;
+            font-weight: 600;
             cursor: pointer;
             text-decoration: none;
             display: inline-block;
@@ -74,15 +74,19 @@
         .headline {
             font-family: 'Libre Baskerville', serif;
             font-size: 28px;
-            color: #0F3E29;
+            font-weight: 700;
+            color: #000000;
             text-align: center;
-            margin-bottom: 8px;
-            line-height: 1.2;
+            margin-bottom: 12px;
+            line-height: 120%;
+            letter-spacing: -.56px;
         }
 
         .subheadline {
-            font-size: 18px;
-            color: #0F3E29;
+            font-family: 'Libre Baskerville', serif;
+            font-size: 28px;
+            font-weight: 400;
+            color: #000000;
             text-align: center;
             margin-bottom: 15px;
             font-weight: 500;
@@ -398,7 +402,7 @@
         <!-- Main Content -->
         <main class="main-content">
             <h1 class="headline">Lehi grand opening sale:</h1>
-            <h2 class="subheadline">Get 25% off all services</h2>
+            <h2 class="subheadline">Get 25% off all services</h1>
             <p class="description">
                 Professional massage & expert esthetics<br>
                 tailored to your needs and goals
