--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -566,7 +566,7 @@
 
         <!-- Services Section -->
         <section class="services-section">
-            <h3 class="section-title text-xl mb-3">Give yourself or someone you know the royal treatment</h3>
+            <h3 class="section-title text-xl mb-3">Special launch pricing for our Lehi grand opening</h3>
             <p class="section-description text-sm">
                 Your therapist will blend techniques like Swedish, deep tissue, cupping, trigger point therapy, Himalayan salt stone, aromatherapy, and hot stones to relieve tension, reduce stress, and promote overall wellness.
             </p>
