--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time 4 U Spa - Lehi, Utah Massage & Esthetics</title>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Standard favicon -->
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <!-- Apple touch icon (if you have a 180x180 version) -->
+    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+
+    <!-- For various sizes (if you have them) -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <style>
         :root {
             --color-primary: #0F3E29;
@@ -398,7 +407,7 @@
             .logo { height: 40px; }
             .text-xs { font-size: 14px; }
             .text-sm { font-size: 16px; }
-            .text-lg { font-size: 22px; }
+            .text-lg { font-size: 20px; }
             .text-xl { font-size: 24px; }
             .text-2xl { font-size: 32px; }
             
