--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -632,8 +632,7 @@
         <main class="hero">
             <h1 class="hero-title text-2xl">Lehi grand opening sale: Get 25% off all services</h1>
             <p class="hero-description text-sm">
-                Professional massage & expert esthetics<br>
-                tailored to your needs and goals
+                Professional massage & expert esthetics tailored to your needs and goals
             </p>
 
             <div class="cta-section mb-6">
