--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -269,7 +269,7 @@
 
         .call-text-buttons {
             display: flex;
-            gap: 16px;
+            gap: 10px;
             margin-bottom: 16px;
         }
 
@@ -545,7 +545,7 @@
             .cta-buttons { 
                 max-width: 500px; 
                 margin: 0 auto 25px auto; 
-                gap: 0px; 
+                gap: 20px; 
             }
             .btn-primary, .btn-secondary { 
                 padding: 18px 36px; 
@@ -630,9 +630,11 @@
 
         <!-- Main Content -->
         <main class="hero">
-            <h1 class="hero-title text-2xl">Lehi grand opening sale: Get 25% off all services</h1>
+            <h1 class="hero-title text-2xl">Lehi grand opening sale:</h1>
+            <h2 class="hero-subtitle text-2xl">Get 25% off all services</h2>
             <p class="hero-description text-sm">
-                Professional massage & expert esthetics tailored to your needs and goals
+                Professional massage & expert esthetics<br>
+                tailored to your needs and goals
             </p>
 
             <div class="cta-section mb-6">
@@ -659,39 +661,48 @@
             <h3 class="section-title text-xl mb-3">Special launch pricing for our Lehi grand opening</h3>
 
             <div class="pricing-grid">
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="card card-horizontal">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?offerItems=sv%3A22667426&pId=2521139&cartId=d6a577f2-7ce8-4c6b-8a47-31debdd988e1" class="card card-horizontal">
                     <div class="service-info">
-                        <div class="service-duration text-base">30 min massage</div>
+                        <div class="service-duration text-base">35 min massage</div>
                     </div>
                     <div class="service-price-container">
-                        <div class="service-price text-lg">$50</div>
+                        <div class="service-price text-lg">$45</div>
                         <div class="chevron">›</div>
                     </div>
                 </a>
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="card card-horizontal">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?allOffer=true&menu=true&cartId=5edd7a53-5282-496b-8cb9-b609d092d600" class="card card-horizontal">
                     <div class="service-info">
-                        <div class="service-duration text-base">60 min massage</div>
+                        <div class="service-duration text-base">50 min massage</div>
                     </div>
                     <div class="service-price-container">
-                        <div class="service-price text-lg">$80</div>
+                        <div class="service-price text-lg">$71.25</div>
                         <div class="chevron">›</div>
                     </div>
                 </a>
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="card card-horizontal">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?offerItems=sv%3A22667425&pId=2521139&cartId=c479f300-4359-460c-ada4-f14867f60b1e" class="card card-horizontal">
                     <div class="service-info">
-                        <div class="service-duration text-base">90 min massage</div>
+                        <div class="service-duration text-base">65 min massage</div>
                     </div>
                     <div class="service-price-container">
-                        <div class="service-price text-lg">$120</div>
+                        <div class="service-price text-lg">$82.50</div>
                         <div class="chevron">›</div>
                     </div>
                 </a>
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="card card-horizontal">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?offerItems=sv%3A22667425&pId=2521139&cartId=c479f300-4359-460c-ada4-f14867f60b1e" class="card card-horizontal">
                     <div class="service-info">
-                        <div class="service-duration text-base">120 min massage</div>
+                        <div class="service-duration text-base">80 min massage</div>
                     </div>
                     <div class="service-price-container">
-                        <div class="service-price text-lg">$160</div>
+                        <div class="service-price text-lg">$97.50</div>
+                        <div class="chevron">›</div>
+                    </div>
+                </a>
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?offerItems=sv%3A22667423&pId=2521139&cartId=ec93b82b-2d7c-474a-9135-874206f11cc5" class="card card-horizontal">
+                    <div class="service-info">
+                        <div class="service-duration text-base">110 min massage</div>
+                    </div>
+                    <div class="service-price-container">
+                        <div class="service-price text-lg">$135</div>
                         <div class="chevron">›</div>
                     </div>
                 </a>
@@ -705,42 +716,42 @@
         <section class="hero">
             <h3 class="section-title text-xl mb-6">Professional services we offer:</h3>
             <div class="services-grid">
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="card card-vertical">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve?service=s%3A19757215&pId=2521139" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/accupressure.png')"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Accupressure</div>
                         <div class="service-desc text-xs">Ancient pressure point therapy for pain relief and wellness</div>
                     </div>
                 </a>
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="card card-vertical">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?pId=2521139&cartId=35f9b73d-c76e-493c-a772-26c5dee7c24c" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/gua-sha.png')"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Gua Sha</div>
                         <div class="service-desc text-xs">Traditional scraping technique to improve circulation</div>
                     </div>
                 </a>
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="card card-vertical">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?pId=2521139&cartId=35f9b73d-c76e-493c-a772-26c5dee7c24c" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/ashiatsu.png')"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Ashiatsu</div>
                         <div class="service-desc text-xs">Deep tissue massage using barefoot pressure techniques</div>
                     </div>
                 </a>
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="card card-vertical">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?offerItems=sv%3A22667425&pId=2521139&cartId=c479f300-4359-460c-ada4-f14867f60b1e" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/cupping-therapy.png')"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Cupping therapy</div>
                         <div class="service-desc text-xs">Therapeutic technique to release muscle tension</div>
                     </div>
                 </a>
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="card card-vertical">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve?service=s%3A19747662" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/facial.png')"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Facial</div>
                         <div class="service-desc text-xs">Customized skincare treatment to cleanse, nourish and rejuvenate</div>
                     </div>
                 </a>
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="card card-vertical">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?allOffer=true&menu=true&cartId=df948a64-1888-44d0-896a-846214ac4b2a" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/body-scrub.png')"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Body scrub</div>
