--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -630,11 +630,9 @@
 
         <!-- Main Content -->
         <main class="hero">
-            <h1 class="hero-title text-2xl">Lehi grand opening sale:</h1>
-            <h2 class="hero-subtitle text-2xl">Get 25% off all services</h2>
+            <h1 class="hero-title text-2xl">Lehi grand opening sale:<br>Get 25% off all services</h1>
             <p class="hero-description text-sm">
-                Professional massage & expert esthetics<br>
-                tailored to your needs and goals
+                Professional massage & expert esthetics tailored to your needs and goals
             </p>
 
             <div class="cta-section mb-6">
@@ -643,7 +641,7 @@
                         <a href="tel:3852776716" class="btn btn-primary">Call (385) 277-6716</a>
                         <a href="sms:3852776716" class="btn btn-secondary">Text us</a>
                     </div>
-                    <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="btn btn-secondary">Book online</a>
+                    <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/all-offer?menu=true" class="btn btn-secondary">Book an appointment online</a>
                 </div>
                 <div class="address text-sm">
                     Located in Lehi Marketplace next to Macey's<br>
