--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -242,7 +242,7 @@
         .hero-title {
             font-family: var(--font-serif);
             font-weight: 700;
-            line-height: 1.2;
+            line-height: 150%;
             letter-spacing: -0.56px;
             margin-bottom: 12px;
         }
