--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -749,7 +749,7 @@
                         <div class="service-desc text-xs">Customized skincare treatment to cleanse, nourish and rejuvenate</div>
                     </div>
                 </a>
-                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?allOffer=true&menu=true&cartId=df948a64-1888-44d0-896a-846214ac4b2a" class="card card-vertical">
+                <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?cartId=aeb0f375-3ceb-456b-83eb-c77c365bc2c5" class="card card-vertical">
                     <div class="service-image" style="background-image: url('assets/images/body-scrub.png')"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Body scrub</div>
