--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -41,6 +41,11 @@
             box-sizing: border-box;
         }
 
+        html, body {
+            overflow-x: hidden;
+            max-width: 100%;
+        }
+
         body {
             font-family: var(--font-sans);
             line-height: 1.5;
