--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -41,7 +41,7 @@
             box-sizing: border-box;
         }
 
-        html, body {
+        body {
             overflow-x: hidden;
             max-width: 100%;
         }
