--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -800,8 +800,8 @@
                 <h4 class="text-sm">Follow us</h4>
                 <div class="footer-section-content">
                     <div class="social-links">
-                        <a href="#" class="social-link">f</a>
-                        <a href="#" class="social-link">@</a>
+                        <div style="margin-bottom: 8px;"><a href="https://www.facebook.com/profile.php?id=61574909387507" class="text-base">Facebook</a></div>
+
                     </div>
                 </div>
             </div>
