--- a/index.html
+++ b/index.html
@@ -631,16 +631,12 @@
                 </div>
             </div>
         </header>
-        
-        <div class="promo-banner full-width py-2 text-xs">
-            Limited time offer: Get 25% off all services
-        </div>
 
         <!-- Main Content -->
         <main class="hero">
-            <h1 class="hero-title text-2xl">Lehi grand opening sale:<br>Get 25% off all services</h1>
+            <h1 class="hero-title text-2xl">Traditional Healing Techniques & Skincare</h1>
             <p class="hero-description text-sm">
-                Professional massage & expert esthetics tailored to your needs and goals
+                Each treatment is designed to work with your body's natural healing ability to provide lasting benefits.
             </p>
 
             <div class="cta-section mb-6">
