--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             box-sizing: border-box;
         }
 
+        html {
+            max-width: 100%;
+        }
+        
         body {
             overflow-x: hidden;
             max-width: 100%;
@@ -243,8 +247,8 @@
 
         /* Main Content */
         .hero {
-            text-align: center;
-            padding: 48px 16px;
+        text-align: center;
+        padding: 60px 16px; /* Changed from 48px 16px */
         }
 
         .hero-title {
