--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -41,6 +41,10 @@
             box-sizing: border-box;
         }
 
+        html {
+            max-width: 100%;
+        }
+        
         body {
             overflow-x: hidden;
             max-width: 100%;
