--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Time 4 U Spa - Lehi, Utah Massage & Esthetics</title>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <!-- Standard favicon -->
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="icon" type="image/png" href="/assets/favicon.png">
 
     <style>
         :root {
