--- a/grand-opening-promo/index.html
+++ b/grand-opening-promo/index.html
@@ -1,17 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EC9568Y4P5"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-EC9568Y4P5');
-    </script>
-
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -19,6 +8,11 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-5TJGP5QH');</script>
     <!-- End Google Tag Manager -->
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Time 4 U Spa - Lehi, Utah Massage & Esthetics</title>
+    <!-- rest of your head content -->
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -640,6 +634,61 @@
             .services-grid { gap: 16px; }
             .footer-content { padding: 80px; }
         }
+
+                    .cookie-banner {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: white;
+            color: black;
+            padding: 16px 24px;
+            z-index: 9999;
+            box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+            display: block;
+            }
+
+            .cookie-banner.hidden {
+            display: none;
+            }
+
+            .cookie-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 24px;
+            }
+
+            .cookie-text {
+            font-size: 16px;
+            flex: 1;
+            }
+
+            .cookie-accept-btn {
+            background-color: #0F3E29;
+            color: white;
+            border: none;
+            padding: 16px 24px;
+            border-radius: 120px;
+            cursor: pointer;
+            font-size: 14px;
+            font-weight: 500;
+            white-space: nowrap;
+            }
+
+            @media (max-width: 768px) {
+            .cookie-content {
+                flex-direction: column;
+                text-align: center;
+                gap: 15px;
+            }
+            
+            .cookie-text {
+                font-size: 16px;
+            }
+        }
     </style>
 </head>
 
@@ -649,6 +698,16 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5TJGP5QH"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- ADD THIS HTML right after your opening <body> tag -->
+    <div id="cookie-banner" class="cookie-banner">
+        <div class="cookie-content">
+            <span class="cookie-text">
+            This website uses cookies to improve your experience and analyze traffic. By continuing to use this site, you agree to our use of cookies.
+            </span>
+            <button class="cookie-accept-btn" onclick="acceptCookies()">Accept</button>
+        </div>
+    </div>
 
     <div class="container">
         <!-- Header -->
@@ -839,6 +898,22 @@
     </footer>
 
     <script>
+
+        function acceptCookies() {
+        // Hide the banner
+        document.getElementById('cookie-banner').classList.add('hidden');
+        
+        // Remember the user's choice
+        localStorage.setItem('cookiesAccepted', 'true');
+        }
+
+        // Check if user already accepted cookies
+        document.addEventListener('DOMContentLoaded', function() {
+        if (localStorage.getItem('cookiesAccepted') === 'true') {
+            document.getElementById('cookie-banner').classList.add('hidden');
+        }
+        });
+
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
