SEO optimization added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -12,11 +13,124 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time 4 U Spa - Lehi, Utah Massage & Esthetics</title>
+    <meta name="description" content="Time 4 U Spa in Lehi, Utah offers traditional healing techniques including acupressure, gua sha, ashiatsu, cupping therapy, facials and body scrubs. Book your appointment today.">
     <!-- rest of your head content -->
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time 4 U Spa - Lehi, Utah Massage & Esthetics</title>
+    <meta name="description" content="[your meta description]">
+
+    <!-- Add this structured data -->
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "BeautySalon",
+    "name": "Time 4 U Spa",
+    "description": "Traditional healing techniques and skincare including acupressure, gua sha, ashiatsu, cupping therapy, facials and body scrubs",
+    "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "785 E 200 S, Suite 5",
+        "addressLocality": "Lehi",
+        "addressRegion": "UT",
+        "postalCode": "84043",
+        "addressCountry": "US"
+    },
+    "telephone": "(385) 277-6716",
+    "url": "https://time4uspa.com",
+    "openingHours": [
+        "Mo 09:00-21:00",
+        "Tu 09:00-21:00", 
+        "We 09:00-21:00",
+        "Th 09:00-21:00",
+        "Fr 09:00-21:00",
+        "Sa 09:00-21:00",
+        "Su 09:00-21:00"
+    ],
+    "priceRange": "$$",
+    "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "40.3916",
+        "longitude": "-111.8507"
+    },
+    "sameAs": [
+        "https://www.facebook.com/profile.php?id=61574909387507"
+    ],
+    "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Spa Services",
+        "itemListElement": [
+        {
+            "@type": "Offer",
+            "itemOffered": {
+            "@type": "Service",
+            "name": "Acupressure",
+            "description": "Ancient pressure point therapy for pain relief and wellness"
+            }
+        },
+        {
+            "@type": "Offer", 
+            "itemOffered": {
+            "@type": "Service",
+            "name": "Gua Sha",
+            "description": "Traditional scraping technique to improve circulation"
+            }
+        },
+        {
+            "@type": "Offer",
+            "itemOffered": {
+            "@type": "Service", 
+            "name": "Ashiatsu",
+            "description": "Deep tissue massage using barefoot pressure techniques"
+            }
+        },
+        {
+            "@type": "Offer",
+            "itemOffered": {
+            "@type": "Service",
+            "name": "Cupping Therapy",
+            "description": "Therapeutic technique to release muscle tension"
+            }
+        },
+        {
+            "@type": "Offer",
+            "itemOffered": {
+            "@type": "Service",
+            "name": "Facial",
+            "description": "Customized skincare treatment to cleanse, nourish and rejuvenate"
+            }
+        },
+        {
+            "@type": "Offer",
+            "itemOffered": {
+            "@type": "Service",
+            "name": "Body Scrub", 
+            "description": "Exfoliating treatment to remove dead skin and reveal smooth, glowing skin"
+            }
+        }
+        ]
+    }
+    }
+    </script>
+
+    </script>
+
+    <!-- Add these SEO meta tags -->
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="spa lehi utah, massage therapy lehi, acupressure utah, gua sha lehi, ashiatsu massage, cupping therapy utah, facials lehi, body scrubs utah county">
+    <link rel="canonical" href="https://time4uspa.com">
+
+    <!-- Open Graph tags for social media sharing -->
+    <meta property="og:title" content="Time 4 U Spa - Lehi, Utah Massage & Esthetics">
+    <meta property="og:description" content="Traditional healing techniques including acupressure, gua sha, ashiatsu, cupping therapy, facials and body scrubs in Lehi, Utah. Book your appointment today.">
+    <meta property="og:image" content="https://time4uspa.com/assets/images/hero-image.png">
+    <meta property="og:url" content="https://time4uspa.com">
+    <meta property="og:type" content="business.business">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Time 4 U Spa - Lehi, Utah Massage & Esthetics">
+    <meta name="twitter:description" content="Traditional healing techniques including acupressure, gua sha, ashiatsu, cupping therapy, facials and body scrubs in Lehi, Utah.">
+    <meta name="twitter:image" content="https://time4uspa.com/assets/images/hero-image.png">
+
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <!-- Standard favicon -->
     <link rel="icon" type="image/png" href="assets/favicon.png">
@@ -713,7 +827,7 @@
         <!-- Header -->
         <header class="header full-width">
             <div class="content-wrapper p-3 px-4">
-                <img src="assets/logo-green.png" alt="Time Spa" class="logo">
+                <img src="assets/logo-green.png" alt="Time 4 U Spa - Lehi Utah Massage and Esthetics" class="logo">
                 <div class="header-buttons">
                     <a href="tel:3852776716" class="btn btn-call">Call (385) 277-6716</a>
                     <a href="sms:3852776716" class="btn btn-text">Text</a>
@@ -725,8 +839,9 @@
         <main class="hero">
             <h1 class="hero-title text-2xl">Traditional Healing Techniques & Skincare</h1>
             <p class="hero-description text-sm">
-                Each treatment is designed to work with your body's natural healing ability to provide lasting benefits.
-            </p>
+                <p class="hero-description text-sm">
+                    Located in Lehi, Utah, each treatment is designed to work with your body's natural healing ability to provide lasting benefits for Utah County residents.
+                </p>
 
             <div class="cta-section mb-8">
                 <div class="cta-buttons">
@@ -738,12 +853,13 @@
                 </div>
                 <div class="address text-sm">
                     Located in Lehi Marketplace next to Macey's<br>
+                    Serving Lehi, American Fork, Pleasant Grove, and all of Utah County<br>
                     <a href="#" class="address-link" onclick="openMaps(event)">785 E 200 S, Lehi UT 84043</a>
                 </div>
             </div>
 
             <div class="hero-image">
-                <img src="assets/images/hero-image.png" alt="Spa Treatment">
+                <img src="assets/images/hero-image.png" alt="Relaxing spa treatment room at Time 4 U Spa in Lehi Utah">
             </div>
         </main>
 
@@ -751,42 +867,42 @@
             <h3 class="section-title text-xl mb-6">Professional services we offer:</h3>
             <div class="services-grid">
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve?service=s%3A19757215&pId=2521139" class="card card-vertical">
-                    <div class="service-image" style="background-image: url('assets/images/accupressure.png')"></div>
+                    <div class="service-image" style="background-image: url('assets/images/accupressure.png')" aria-label="Acupressure massage therapy"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Accupressure</div>
                         <div class="service-desc text-xs">Ancient pressure point therapy for pain relief and wellness</div>
                     </div>
                 </a>
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?pId=2521139&cartId=35f9b73d-c76e-493c-a772-26c5dee7c24c" class="card card-vertical">
-                    <div class="service-image" style="background-image: url('assets/images/gua-sha.png')"></div>
+                    <div class="service-image" style="background-image: url('assets/images/gua-sha.png')" aria-label="Gua sha traditional healing technique"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Gua Sha</div>
                         <div class="service-desc text-xs">Traditional scraping technique to improve circulation</div>
                     </div>
                 </a>
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?pId=2521139&cartId=35f9b73d-c76e-493c-a772-26c5dee7c24c" class="card card-vertical">
-                    <div class="service-image" style="background-image: url('assets/images/ashiatsu.png')"></div>
+                    <div class="service-image" style="background-image: url('assets/images/ashiatsu.png')" aria-label="Ashiatsu barefoot massage therapy"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Ashiatsu</div>
                         <div class="service-desc text-xs">Deep tissue massage using barefoot pressure techniques</div>
                     </div>
                 </a>
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?offerItems=sv%3A22667425&pId=2521139&cartId=c479f300-4359-460c-ada4-f14867f60b1e" class="card card-vertical">
-                    <div class="service-image" style="background-image: url('assets/images/cupping-therapy.png')"></div>
+                    <div class="service-image" style="background-image: url('assets/images/cupping-therapy.png')" aria-label="Cupping therapy treatment"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Cupping therapy</div>
                         <div class="service-desc text-xs">Therapeutic technique to release muscle tension</div>
                     </div>
                 </a>
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve?service=s%3A19747662" class="card card-vertical">
-                    <div class="service-image" style="background-image: url('assets/images/facial.png')"></div>
+                    <div class="service-image" style="background-image: url('assets/images/facial.png')" aria-label="Professional facial skincare treatment"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Facial</div>
                         <div class="service-desc text-xs">Customized skincare treatment to cleanse, nourish and rejuvenate</div>
                     </div>
                 </a>
                 <a href="https://www.fresha.com/a/time-4-u-spa-lehi-785-east-200-south-suite-05-tcqgp9ve/booking?cartId=aeb0f375-3ceb-456b-83eb-c77c365bc2c5" class="card card-vertical">
-                    <div class="service-image" style="background-image: url('assets/images/body-scrub.png')"></div>
+                    <div class="service-image" style="background-image: url('assets/images/body-scrub.png')" aria-label="Exfoliating body scrub treatment"></div>
                     <div class="service-content">
                         <div class="service-title text-sm">Body scrub</div>
                         <div class="service-desc text-xs">Exfoliating treatment to remove dead skin and reveal smooth, glowing skin</div>
@@ -803,8 +919,8 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo-section">
-                <img src="assets/logo-white.png" alt="Time Spa" class="footer-logo">
-                <div class="footer-tagline text-sm">Personalized Massage & Esthetics</div>
+                <img src="assets/logo-white.png" alt="Time 4 U Spa - Lehi Utah Massage and Esthetics" class="footer-logo">
+                <div class="footer-tagline text-sm">Lehi's Premier Massage & Esthetics Spa</div>
                 <div class="footer-hours text-sm">Open every day from 9AM - 9PM</div>
             </div>
             
